[gd_scene load_steps=20 format=3 uid="uid://4sfhpsiidoeo"]

[ext_resource type="Script" path="res://third_person.gd" id="1_2wgax"]
[ext_resource type="Script" path="res://main_scene.gd" id="1_ahthw"]
[ext_resource type="PackedScene" uid="uid://b1rn0s3p4od7v" path="res://koishi_01_godot.tscn" id="1_y6okv"]
[ext_resource type="Texture2D" uid="uid://ddqknstly5riv" path="res://PavingStones126A_2K-PNG_AmbientOcclusion.png" id="3_8ghig"]
[ext_resource type="Script" path="res://camera_shaft.gd" id="4_hrl3p"]
[ext_resource type="Texture2D" uid="uid://cf05hvaar3jcp" path="res://Epic_BlueSunset_EquiRect_flat.png" id="5_apwje"]
[ext_resource type="Script" path="res://EnemyAI01.gd" id="6_kmdvi"]
[ext_resource type="PackedScene" uid="uid://bhw2hxbq28kgh" path="res://reimu.tscn" id="6_mtjav"]
[ext_resource type="AudioStream" uid="uid://dtarec6oce7lt" path="res://03-SomeTimeAlone.mp3" id="8_hv5fu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7xgf6"]
height = 1.87424

[sub_resource type="BoxMesh" id="BoxMesh_t3tg8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oxtuq"]
albedo_texture = ExtResource("3_8ghig")
uv1_scale = Vector3(400, 400, 400)

[sub_resource type="BoxShape3D" id="BoxShape3D_ps8ya"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_eafpu"]
panorama = ExtResource("5_apwje")

[sub_resource type="Sky" id="Sky_s0ulh"]
sky_material = SubResource("PanoramaSkyMaterial_eafpu")

[sub_resource type="Environment" id="Environment_l5jrg"]
background_mode = 2
sky = SubResource("Sky_s0ulh")
ssao_enabled = true
ssao_intensity = 16.0
ssao_power = 0.568394

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_0qaee"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7xkoo"]
height = 1.91384

[sub_resource type="LabelSettings" id="LabelSettings_r3076"]
font_size = 80
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Node3D" type="Node3D"]

[node name="Koishi" type="CharacterBody3D" parent="." groups=["Player"]]
script = ExtResource("1_2wgax")

[node name="koishi01godot" parent="Koishi" instance=ExtResource("1_y6okv")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Koishi"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0504045, 0.827466, 0.0010978)
shape = SubResource("CapsuleShape3D_7xgf6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1000, 0, 0, 0, 1000, 0, 0, 0, 1000, 0, -500, 0)
mesh = SubResource("BoxMesh_t3tg8")
surface_material_override/0 = SubResource("StandardMaterial3D_oxtuq")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_ps8ya")

[node name="Camera_Shaft" type="Node3D" parent="."]
script = ExtResource("4_hrl3p")

[node name="Camera3D" type="Camera3D" parent="Camera_Shaft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.2)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_l5jrg")
camera_attributes = SubResource("CameraAttributesPractical_0qaee")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.79653, 0.604599, 0, -0.604599, 0.79653, 0, 31.1987, 0)
light_energy = 0.6
shadow_enabled = true

[node name="Reimu" type="CharacterBody3D" parent="." groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -17.6136)
script = ExtResource("6_kmdvi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Reimu"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.845563, 0)
shape = SubResource("CapsuleShape3D_7xkoo")

[node name="reimu" parent="Reimu" instance=ExtResource("6_mtjav")]
transform = Transform3D(-1.1, 0, -9.61651e-08, 0, 1.1, 0, 9.61651e-08, 0, -1.1, 0, 0, 0)

[node name="Koishi_Life" type="ProgressBar" parent="."]
offset_left = 40.0
offset_top = 20.0
offset_right = 420.0
offset_bottom = 50.0

[node name="Reimu_Life" type="ProgressBar" parent="."]
offset_left = 40.0
offset_top = 70.0
offset_right = 420.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="."]
offset_left = 40.0
offset_right = 150.0
offset_bottom = 23.0
text = "Koishi HP
"

[node name="Label2" type="Label" parent="."]
offset_left = 40.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 73.0
text = "Reimu HP"

[node name="WinText" type="Label" parent="."]
offset_left = 350.0
offset_top = 250.0
offset_right = 850.0
offset_bottom = 400.0
text = "You Win"
label_settings = SubResource("LabelSettings_r3076")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_hv5fu")
volume_db = -10.0
autoplay = true

[node name="PauseText" type="Label" parent="."]
offset_left = 300.0
offset_top = 400.0
offset_right = 920.0
offset_bottom = 480.0

[node name="Node3D" type="Node3D" parent="."]
process_mode = 3
script = ExtResource("1_ahthw")
